testsuite/gna/bug0122/tab1.ref
tab1.vhdl:3:7:error: two underscores can't be consecutive
    p__1 : bit;
      ^
tab1.vhdl:4:10:error: two underscores can't be consecutive
    abcd__2 : bit;
         ^
tab1.vhdl:5:8:error: an identifier cannot finish with '_'
    bad_ : bit;
       ^
tab1.vhdl:6:14:error: an identifier cannot finish with '_'
        ontab_ : bit;
             ^
tab1.vhdl:7:14:error: an identifier cannot finish with '_'
        notab_ : bit;
             ^
tab1.vhdl:8:5:error: an identifier can't start with '_'
    _err : bit;
    ^
tab1.vhdl:9:26:error: underscore must be followed by a digit
    num : integer := 1_2_);
                         ^
